--- a/gallery.html
+++ b/gallery.html
@@ -169,8 +169,8 @@
     data-attribute="DARK" 
     data-level="4" 
     data-atk="1800" 
-    data-def="0" 
-    data-effect="Once per turn, if your opponent controls a monster: You can send 1 'Gimmick Puppet' monster from your hand to the GY; Special Summon this card from your hand." 
+    data-def="500" 
+    data-effect="If this card is in your hand: You can target 1 &quot;Gimmick Puppet&quot; monster in your GY or 1 monster in your opponent's GY; Special Summon it to its owner's field in Defense Position, but its effects are negated, then Special Summon this card. ||If this card is sent to the GY, except from the hand: You can add it to your hand. ||You can only use each effect of &quot;Gimmick Puppet Fiendish Knight&quot; once per turn, also you cannot Special Summon from the Extra Deck the turn you activate either of this card's effects, except &quot;Gimmick Puppet&quot; monsters." 
   />
   <img 
     src="https://s3.duellinksmeta.com/cards/60c2b3aba0e24f2d54a523d9_w420.webp" 
