--- a/gallery.html
+++ b/gallery.html
@@ -134,7 +134,7 @@
     <a href="index.html" style="font-weight: 600; font-size: 1rem; padding: 0.25rem 0.5rem; color: #7ecbff; text-decoration: none;">← Back to Home</a>
   </nav>
 
-  <h1>Gimmick Puppet Card Gallery</h1>
+  <h1>Card Gallery</h1>
 
   <!-- Tabs -->
   <div class="tabs">
@@ -180,9 +180,9 @@
     data-type="Machine / Effect Monster" 
     data-attribute="DARK" 
     data-level="4" 
-    data-atk="1700" 
-    data-def="1200" 
-    data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand." 
+    data-atk="500" 
+    data-def="0" 
+    data-effect="When this card is Normal Summoned: You can target 1 &quot;Gimmick Puppet&quot; monster in your GY, except &quot;Gimmick Puppet Terror Baby&quot;; Special Summon it in Defense Position. ||You can banish this card from your GY; your opponent cannot activate cards or effects in response to the activation of your &quot;Gimmick Puppet&quot; monster effects this turn." 
   />
 
   <!-- Add spell/trap/extra cards here with their respective data-category attributes -->
