--- a/gallery.html
+++ b/gallery.html
@@ -195,7 +195,7 @@
       data-level="4" 
       data-atk="1600" 
       data-def="1000" 
-      data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand. During your Main Phase, you can reveal this card in your hand, then target 1 Rank 8 Xyz Monster you control; Special Summon this card, then immediately after this effect resolves, Xyz Summon 1 Machine-Type 'Gimmick Puppet' Xyz Monster using only those 2 monsters." 
+      data-effect="If this card is in your hand: You can reveal 1 &quot;Gimmick Puppet&quot; Xyz Monster in your Extra Deck; Special Summon both this card, and 1 &quot;Gimmick Puppet&quot; monster with the same Level as the revealed monster's Rank from your Deck. ||If this card is sent to the GY, except from the hand: You can add this card to your hand. ||You can only use each effect of &quot;Gimmick Puppet Rouge Doll&quot; once per turn. You cannot Special Summon from the Extra Deck the turn you activate either of this card's effects, except &quot;Gimmick Puppet&quot; monsters." 
       data-category="monster"
     />
 
