--- a/gallery.html
+++ b/gallery.html
@@ -219,9 +219,9 @@
       data-type="Machine / Xyz / Effect Monster" 
       data-attribute="DARK" 
       data-rank="8" 
-      data-atk="3000" 
-      data-def="2000" 
-      data-effect="2 Level 8 Machine-Type monsters. You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." 
+      data-atk="1500" 
+      data-def="3100" 
+      data-effect="2 Level 8 monsters. You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." 
       data-category="extra"
     />
 
