--- a/gallery.html
+++ b/gallery.html
@@ -221,7 +221,8 @@
       data-rank="8" 
       data-atk="1500" 
       data-def="3100" 
-      data-effect="2 Level 8 monsters. You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." 
+      data-effect="2 Level 8 monsters
+You can detach 1 material from this card; add 1 &quot;Rank-Up-Magic&quot; Spell from your Deck to your hand, also, you can Normal Summon 1 Machine monster during your Main Phase this turn, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) ||If you Special Summon a &quot;Gimmick Puppet&quot; Xyz Monster(s) (except during the Damage Step): You can Special Summon this card from your GY to either field in Defense Position, then you can add 1 &quot;Rank-Up-Magic&quot; Spell from your GY to your hand. ||You can only use each effect of &quot;Gimmick Puppet Fantasix Machinix&quot; once per turn." 
       data-category="extra"
     />
 
