--- a/gallery.html
+++ b/gallery.html
@@ -365,19 +365,98 @@ modalDetails.innerHTML = details;
 
       const selectedTab = button.dataset.tab;
 
-      cards.forEach(card => {
-        if (selectedTab === 'all') {
-          card.style.display = 'block';
-        } else {
-          if (card.dataset.category === selectedTab) {
-            card.style.display = 'block';
-          } else {
-            card.style.display = 'none';
-          }
-        }
-      });
+// Modal pop-up functionality
+const modal = document.getElementById('cardModal');
+const modalName = document.getElementById('modalName');
+const modalImg = document.getElementById('modalImg');
+const modalDetails = document.getElementById('modalDetails');
+const modalClose = document.getElementById('modalClose');
+
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    modal.style.display = 'block';
+    modalName.textContent = img.dataset.name;
+    modalImg.src = img.src;
+    modalImg.alt = img.alt;
+
+    let effectText = img.dataset.effect || '';
+    let splitEffects = effectText.split('||').map(e => e.trim());
+
+    let summoningCondition = '';
+    let effectsList = [];
+
+    if (img.dataset.category === 'extra') {
+      // Try to extract summoning condition (before first period)
+      let firstPart = splitEffects[0] || '';
+      let firstPeriodIndex = firstPart.indexOf('.');
+      if (firstPeriodIndex !== -1) {
+        summoningCondition = firstPart.slice(0, firstPeriodIndex).trim();
+        let restEffect = firstPart.slice(firstPeriodIndex + 1).trim();
+        if (restEffect) effectsList.push(restEffect);
+      } else {
+        effectsList.push(firstPart);
+      }
+      // Add remaining effects after first
+      effectsList = effectsList.concat(splitEffects.slice(1));
+    } else {
+      effectsList = splitEffects;
+    }
+
+    // Format effects with (1), (2), etc:
+    let formattedEffects = effectsList
+      .filter(e => e.length > 0)
+      .map((effect, index) => `<strong>(${index + 1})</strong> ${effect}`)
+      .join('<br/><br/>');
+
+    let details = `
+      <strong>Type:</strong> ${img.dataset.type}<br/>
+      <strong>Attribute:</strong> ${img.dataset.attribute}<br/>
+      ${img.dataset.level && img.dataset.level !== '-' ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
+      ${img.dataset.rank && img.dataset.rank !== '-' ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
+      <strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>
+      ${summoningCondition ? `<strong>Summoning Condition:</strong> ${summoningCondition}<br/><br/>` : ''}
+      ${formattedEffects}
+    `;
+
+    modalDetails.innerHTML = details;
+  });
+});
+
+modalClose.onclick = () => (modal.style.display = 'none');
+
+window.onclick = event => {
+  if (event.target == modal) {
+    modal.style.display = 'none';
+  }
+};
+
+// Image zoom inside modal
+modalImg.addEventListener('click', () => {
+  modalImg.classList.toggle('zoomed');
+});
+
+// Tab switching functionality
+const tabButtons = document.querySelectorAll('.tab-btn');
+const cards = document.querySelectorAll('.gallery img');
+
+tabButtons.forEach(button => {
+  button.addEventListener('click', () => {
+    // Remove active class from all tabs
+    tabButtons.forEach(btn => btn.classList.remove('active'));
+    // Set clicked tab active
+    button.classList.add('active');
+
+    const selectedTab = button.dataset.tab;
+
+    cards.forEach(card => {
+      if (selectedTab === 'all') {
+        card.style.display = 'block';
+      } else {
+        card.style.display = card.dataset.category === selectedTab ? 'block' : 'none';
+      }
     });
   });
+});
 </script>
 
 </body>
