--- a/gallery.html
+++ b/gallery.html
@@ -228,13 +228,9 @@
     <!-- Example Spell Card -->
     <img 
       src="https://via.placeholder.com/80x115.png?text=Spell+Card" 
-      alt="Gimmick Puppet Spell Example" 
-      data-name="Gimmick Puppet Spell Example" 
+      alt="Condolence Puppet" 
+      data-name="Condolence Puppet" 
       data-type="Spell Card" 
-      data-attribute="-" 
-      data-level="-" 
-      data-atk="-" 
-      data-def="-" 
       data-effect="This is a placeholder spell card effect description." 
       data-category="spell"
     />
