--- a/gallery.html
+++ b/gallery.html
@@ -238,13 +238,9 @@
     <!-- Example Trap Card -->
     <img 
       src="https://via.placeholder.com/80x115.png?text=Trap+Card" 
-      alt="Gimmick Puppet Trap Example" 
-      data-name="Gimmick Puppet Trap Example" 
+      alt="Service Puppet Play" 
+      data-name="Service Puppet Play" 
       data-type="Trap Card" 
-      data-attribute="-" 
-      data-level="-" 
-      data-atk="-" 
-      data-def="-" 
       data-effect="This is a placeholder trap card effect description." 
       data-category="trap"
     />
