--- a/gallery.html
+++ b/gallery.html
@@ -273,6 +273,16 @@ const modalImg = document.getElementById('modalImg');
 const modalDetails = document.getElementById('modalDetails');
 const modalClose = document.getElementById('modalClose');
 
+// Close modal on clicking close button
+modalClose.onclick = () => (modal.style.display = 'none');
+
+// Close modal on clicking outside modal content
+window.onclick = event => {
+  if (event.target == modal) {
+    modal.style.display = 'none';
+  }
+};
+
 document.querySelectorAll('.gallery img').forEach(img => {
   img.addEventListener('click', () => {
     modal.style.display = 'block';
@@ -303,35 +313,30 @@ document.querySelectorAll('.gallery img').forEach(img => {
       effectsList = splitEffects;
     }
 
-// Format effects with (1), (2), etc:
-let formattedEffects = effectsList
-  .filter(e => e.length > 0)
-  .map((effect, index) => `<strong>(${index + 1})</strong> ${effect}`)
-  .join('<br/><br/>');
+    // Format effects with (1), (2), etc:
+    let formattedEffects = effectsList
+      .filter(e => e.length > 0)
+      .map((effect, index) => `<strong>(${index + 1})</strong> ${effect}`)
+      .join('<br/><br/>');
 
-// Determine if the card is a Spell or Trap
-let isSpellOrTrap = img.dataset.type.includes('Spell') || img.dataset.type.includes('Trap');
+    // Determine if the card is a Spell or Trap
+    let isSpellOrTrap = img.dataset.type.includes('Spell') || img.dataset.type.includes('Trap');
 
-// Construct the details string
-let details = `
-  <strong>Type:</strong> ${img.dataset.type}<br/>
-  ${!isSpellOrTrap ? `<strong>Attribute:</strong> ${img.dataset.attribute}<br/>` : ''}
-  ${img.dataset.level && img.dataset.level !== '-' && !isSpellOrTrap ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
-  ${img.dataset.rank && img.dataset.rank !== '-' ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
-  ${!isSpellOrTrap ? `<strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>` : ''}
-  ${summoningCondition ? `<strong>Summoning Condition:</strong> ${summoningCondition}<br/><br/>` : ''}
-  ${formattedEffects}
-`;
+    // Construct the details string
+    let details = `
+      <strong>Type:</strong> ${img.dataset.type}<br/>
+      ${!isSpellOrTrap ? `<strong>Attribute:</strong> ${img.dataset.attribute}<br/>` : ''}
+      ${img.dataset.level && img.dataset.level !== '-' && !isSpellOrTrap ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
+      ${img.dataset.rank && img.dataset.rank !== '-' ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
+      ${!isSpellOrTrap ? `<strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>` : ''}
+      ${summoningCondition ? `<strong>Summoning Condition:</strong> ${summoningCondition}<br/><br/>` : ''}
+      ${formattedEffects}
+    `;
 
-// Now assign the details string to the modal
-modalDetails.innerHTML = details;
-modalClose.onclick = () => (modal.style.display = 'none');
-
-window.onclick = event => {
-  if (event.target == modal) {
-    modal.style.display = 'none';
-  }
-};
+    // Now assign the details string to the modal
+    modalDetails.innerHTML = details;
+  });
+});
 
 // Image zoom inside modal
 modalImg.addEventListener('click', () => {
@@ -360,6 +365,7 @@ tabButtons.forEach(button => {
     });
   });
 });
+
 </script>
 
 </body>
