--- a/gallery.html
+++ b/gallery.html
@@ -231,6 +231,10 @@
       alt="Condolence Puppet" 
       data-name="Condolence Puppet" 
       data-type="Spell Card" 
+      data-attribute="N/A" 
+      data-level="N/A" 
+      data-atk="N/A" 
+      data-def="N/A" 
       data-effect="This is a placeholder spell card effect description." 
       data-category="spell"
     />
@@ -241,6 +245,10 @@
       alt="Service Puppet Play" 
       data-name="Service Puppet Play" 
       data-type="Trap Card" 
+      data-attribute="N/A" 
+      data-level="N/A" 
+      data-atk="N/A" 
+      data-def="N/A" 
       data-effect="This is a placeholder trap card effect description." 
       data-category="trap"
     />
