--- a/gallery.html
+++ b/gallery.html
@@ -235,7 +235,7 @@
       data-level="N/A" 
       data-atk="N/A" 
       data-def="N/A" 
-      data-effect="Send &quot;Gimmick Puppet@quot; monsters with different names from your Deck to the GY, up to the number of monsters your opponent controls that were Special Summoned from the Extra Deck +1. ||You can banish this card from your GY, then target 1 Machine Xyz Monster you control; it cannot be destroyed by your opponent's card effects while face-up on the field. ||You can only use each effect of &quot;Condolence Puppet&quot; once per turn." 
+      data-effect="Send &quot;Gimmick Puppet&quot; monsters with different names from your Deck to the GY, up to the number of monsters your opponent controls that were Special Summoned from the Extra Deck +1. ||You can banish this card from your GY, then target 1 Machine Xyz Monster you control; it cannot be destroyed by your opponent's card effects while face-up on the field. ||You can only use each effect of &quot;Condolence Puppet&quot; once per turn." 
       data-category="spell"
     />
 
@@ -249,7 +249,7 @@
       data-level="N/A" 
       data-atk="N/A" 
       data-def="N/A" 
-      data-effect="This is a placeholder trap card effect description." 
+      data-effect="Target monsters your opponent controls, up to the number of &quot;Gimmick Puppet&quot; Xyz Monsters you control; take control of those monsters until the End Phase. ||If this card is in your GY, except the turn it was sent there, and you control a &quot;Gimmick Puppet&quot; Xyz Monster: You can banish this card, then target 1 Xyz Monster in either GY; Special Summon it to either field in Defense Position. ||You can only use each effect of &quot;Service Puppet Play&quot; once per turn." 
       data-category="trap"
     />
 
