--- a/gallery.html
+++ b/gallery.html
@@ -227,7 +227,7 @@
 
     <!-- Example Spell Card -->
     <img 
-      src="https://via.placeholder.com/80x115.png?text=Spell+Card" 
+      src="https://s3.duellinksmeta.com/cards/60c2b3aaa0e24f2d54a519e3_w420.webp" 
       alt="Condolence Puppet" 
       data-name="Condolence Puppet" 
       data-type="Spell Card" 
@@ -241,7 +241,7 @@
 
     <!-- Example Trap Card -->
     <img 
-      src="https://via.placeholder.com/80x115.png?text=Trap+Card" 
+      src="https://s3.duellinksmeta.com/cards/65f321b64e67b487ab088de1_w420.webp" 
       alt="Service Puppet Play" 
       data-name="Service Puppet Play" 
       data-type="Trap Card" 
