--- a/gallery.html
+++ b/gallery.html
@@ -208,7 +208,8 @@
       data-level="8" 
       data-atk="2000" 
       data-def="2000" 
-      data-effect="If this card is sent from the Deck to the GY by a 'Gimmick Puppet' monster’s effect: You can add this card from your GY to your hand. You can detach 1 material from an Xyz Monster you control, then target 1 'Gimmick Puppet' monster in your GY, except 'Gimmick Puppet Cattle Scream'; Special Summon that target." 
+      data-effect="You can detach 1 material from an Xyz Monster you control; Special Summon this card from your hand or GY, but banish it when it leaves the field. You can only use this effect of &quot;Gimmick Puppet Cattle Scream&quot; once per turn. ||A &quot;Gimmick Puppet&quot; Xyz Monster that has this card as material gains this effect.
+●Once per turn: You can target 1 monster in your opponent's GY; Special Summon it to your opponent's field in Defense Position."
       data-category="monster"
     />
 
