--- a/gallery.html
+++ b/gallery.html
@@ -376,6 +376,21 @@ tabButtons.forEach(button => {
 });
 
 </script>
-
+<!-- At the end of gallery.html -->
+...
+<script src="modal.js"></script>
+</body>
+<!-- Modal Shell -->
+<div id="cardModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 id="modalName"></h2>
+      <span class="close" id="modalClose">&times;</span>
+    </div>
+    <img id="modalImg" src="" alt="" />
+    <div class="modal-body" id="modalDetails"></div>
+    <div class="modal-footer">Card details sourced from official databases.</div>
+  </div>
+</div>
 </body>
 </html>
