--- a/combo.html
+++ b/combo.html
@@ -250,5 +250,6 @@
     <div class="modal-footer">Card details sourced from official databases.</div>
   </div>
 </div>
+  <script src="modal.js"></script>
 </body>
 </html>
