--- a/index.html
+++ b/index.html
@@ -192,5 +192,6 @@
     <div class="modal-footer">Card details sourced from official databases.</div>
   </div>
 </div>
+  <script src="modal.js"></script>
 </body>
 </html>
