--- a/gallery.html
+++ b/gallery.html
@@ -392,5 +392,6 @@ tabButtons.forEach(button => {
     <div class="modal-footer">Card details sourced from official databases.</div>
   </div>
 </div>
+  <script src="modal.js"></script>
 </body>
 </html>
