--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </nav>
 
     <div class="images">
-      <img src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" alt="Gimmick Puppet Rouge Doll" />
+      <img src="images/65f321124e67b487ab0883a7_w420.jpg" data-key="65f321124e67b487ab0883a7_w420" alt="Gimmick Puppet Little Soldiers" />
       <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream" />
       <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" />
     </div>
