--- a/index.html
+++ b/index.html
@@ -1,152 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Gimmick Puppet Deck</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gimmick Puppet Deck</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-<style>
-  /* Reset & base */
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: #1a1a1a;
-    color: #ddd;
-    margin: 0;
-    padding: 2rem 1rem;
-    line-height: 1.6;
-  }
-  a {
-    color: #7ecbff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  a:hover {
-    color: #4aa3ff;
-    text-decoration: underline;
-  }
+  <style>
+    /* Reset & base */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #1a1a1a;
+      color: #ddd;
+      margin: 0;
+      padding: 2rem 1rem;
+      line-height: 1.6;
+    }
+    a {
+      color: #7ecbff;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+    a:hover {
+      color: #4aa3ff;
+      text-decoration: underline;
+    }
 
-  /* Container */
-  .container {
-    max-width: 700px;
-    margin: 0 auto;
-  }
+    /* Container */
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+    }
 
-  /* Header */
-  header {
-    text-align: center;
-    margin-bottom: 0.5rem;
-  }
-  header h1 {
-    font-weight: 700;
-    font-size: 2.8rem;
-    margin: 0;
-  }
-  header p.subtitle {
-    font-weight: 400;
-    font-size: 1.25rem;
-    color: #aaa;
-    margin-top: 0.25rem;
-    font-style: italic;
-  }
+    /* Header */
+    header {
+      text-align: center;
+      margin-bottom: 0.5rem;
+    }
+    header h1 {
+      font-weight: 700;
+      font-size: 2.8rem;
+      margin: 0;
+    }
+    header p.subtitle {
+      font-weight: 400;
+      font-size: 1.25rem;
+      color: #aaa;
+      margin-top: 0.25rem;
+      font-style: italic;
+    }
 
-  /* Navigation */
-  nav {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin-bottom: 2rem;
-  }
-  nav a {
-    font-weight: 600;
-    font-size: 1rem;
-    padding: 0.25rem 0.5rem;
-  }
-  nav a:hover {
-    background-color: #333;
-    border-radius: 4px;
-  }
+    /* Navigation */
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-bottom: 2rem;
+    }
+    nav a {
+      font-weight: 600;
+      font-size: 1rem;
+      padding: 0.25rem 0.5rem;
+    }
+    nav a:hover {
+      background-color: #333;
+      border-radius: 4px;
+    }
 
-  /* Images */
-  .images {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 2rem;
-    flex-wrap: wrap;
-  }
-  .images img {
-    width: 200px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px #000;
-    opacity: 0.4;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-  .images img:hover {
-    opacity: 1;
-    transform: scale(1.05);
-  }
-
-  /* Content */
-  p {
-    margin-bottom: 1rem;
-    font-size: 1rem;
-  }
-
-  /* Call to action */
-  .cta {
-    display: block;
-    background-color: #4aa3ff;
-    color: white;
-    text-align: center;
-    padding: 0.75rem 1.25rem;
-    font-weight: 600;
-    border-radius: 6px;
-    max-width: 220px;
-    margin: 1rem auto 2rem auto;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  .cta:hover {
-    background-color: #3786db;
-  }
-
-  /* Footer */
-  footer {
-    text-align: center;
-    font-size: 0.85rem;
-    color: #666;
-    border-top: 1px solid #333;
-    padding: 1rem 0 0;
-    margin-top: 3rem;
-  }
-
-  /* Responsive */
-  @media (max-width: 600px) {
+    /* Images */
     .images {
-      flex-direction: column;
-      align-items: center;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 2rem;
+      flex-wrap: wrap;
     }
     .images img {
-      width: 80vw;
-      max-width: 300px;
+      width: 200px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #000;
+      opacity: 0.4;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      cursor: pointer;
     }
-    nav {
-      flex-direction: column;
-      gap: 1rem;
+    .images img:hover {
+      opacity: 1;
+      transform: scale(1.05);
     }
-  }
-</style>
+
+    /* Content */
+    p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+
+    /* Call to action */
+    .cta {
+      display: block;
+      background-color: #4aa3ff;
+      color: white;
+      text-align: center;
+      padding: 0.75rem 1.25rem;
+      font-weight: 600;
+      border-radius: 6px;
+      max-width: 220px;
+      margin: 1rem auto 2rem auto;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+    .cta:hover {
+      background-color: #3786db;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #666;
+      border-top: 1px solid #333;
+      padding: 1rem 0 0;
+      margin-top: 3rem;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.8);
+    }
+    .modal-content {
+      background-color: #1a1a1a;
+      margin: 5% auto;
+      padding: 1rem;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 600px;
+      border-radius: 10px;
+      color: #ddd;
+    }
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .modal-header h2 {
+      margin: 0;
+    }
+    .modal-header .close {
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+    .modal img {
+      width: 100%;
+      border-radius: 8px;
+      margin: 1rem 0;
+    }
+    .modal-body {
+      font-size: 1rem;
+    }
+    .modal-footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #666;
+      border-top: 1px solid #333;
+      padding-top: 0.5rem;
+    }
+    .zoomed {
+      transform: scale(2);
+      cursor: zoom-out;
+      transition: transform 0.3s ease;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .images {
+        flex-direction: column;
+        align-items: center;
+      }
+      .images img {
+        width: 80vw;
+        max-width: 300px;
+      }
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
-
     <header>
       <h1>Gimmick Puppet Deck</h1>
       <p class="subtitle">Master the art of String Counters and XYZ supremacy with the Gimmick Puppet deck!</p>
@@ -160,13 +215,18 @@
     </nav>
 
     <div class="images">
-      <img src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" data-key="65f321124e67b487ab0883a7_w420" alt="Gimmick Puppet Little Soldiers" />
-      <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream" />
-      <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" />
+      <img src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" 
+           data-key="65f321124e67b487ab0883a7_w420" 
+           alt="Gimmick Puppet Little Soldiers" />
+      <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" 
+           data-key="65f3214d4e67b487ab0887c0_w420" 
+           alt="Gimmick Puppet Cattle Scream" />
+      <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" 
+           data-key="65f3216e4e67b487ab08898c_w420" 
+           alt="Gimmick Puppet Fantasix Machinix" />
     </div>
 
     <p>Welcome to the Gimmick Puppet deck resource! This page features detailed info, combos, and tips to master this unique Machine XYZ archetype.</p>
-
     <p>See <a href="https://www.masterduelmeta.com/articles/guides/gimmick-puppet-pickles" target="_blank" rel="noopener noreferrer">this excellent guide</a> for full deck strategies and combos.</p>
 
     <a class="cta" href="combo.html">Try the One-Card FTK Combo!</a>
@@ -174,24 +234,21 @@
     <footer>
       Guide and images sourced from Master Duel Meta and official Yu-Gi-Oh! cards.
     </footer>
+  </div>
 
-  </div>
-  <!-- At the end of gallery.html -->
-...
-<script src="modal.js"></script>
-</body>
-<!-- Modal Shell -->
-<div id="cardModal" class="modal">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h2 id="modalName"></h2>
-      <span class="close" id="modalClose">&times;</span>
+  <!-- Modal -->
+  <div id="cardModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 id="modalName"></h2>
+        <span class="close" id="modalClose">&times;</span>
+      </div>
+      <img id="modalImg" src="" alt="" />
+      <div class="modal-body" id="modalDetails"></div>
+      <div class="modal-footer">Card details sourced from official databases.</div>
     </div>
-    <img id="modalImg" src="" alt="" />
-    <div class="modal-body" id="modalDetails"></div>
-    <div class="modal-footer">Card details sourced from official databases.</div>
   </div>
-</div>
+
   <script src="modal.js"></script>
 </body>
 </html>
