--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@
     </nav>
 
     <div class="images">
-      <img src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" 
-           data-key="65f321124e67b487ab0883a7_w420" 
-           alt="Gimmick Puppet Little Soldiers" />
-      <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" 
-           data-key="65f3214d4e67b487ab0887c0_w420" 
-           alt="Gimmick Puppet Cattle Scream" />
-      <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" 
-           data-key="65f3216e4e67b487ab08898c_w420" 
-           alt="Gimmick Puppet Fantasix Machinix" />
+<img src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" 
+     data-key="0" 
+     alt="Gimmick Puppet Little Soldiers" />
+<img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" 
+     data-key="4" 
+     alt="Gimmick Puppet Cattle Scream" />
+<img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" 
+     data-key="5" 
+     alt="Gimmick Puppet Fantasix Machinix" />
     </div>
 
     <p>Welcome to the Gimmick Puppet deck resource! This page features detailed info, combos, and tips to master this unique Machine XYZ archetype.</p>
