--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </nav>
 
     <div class="images">
-<img src="..." data-name="Gimmick Puppet Little Soldiers" alt="Gimmick Puppet Little Soldiers">
+<img src="https://s3.duellinksmeta.com/cards/65f321124e67b487ab0883a7_w420.webp" data-name="Gimmick Puppet Little Soldiers" alt="Gimmick Puppet Little Soldiers">
 <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" 
      data-key="4" 
      alt="Gimmick Puppet Cattle Scream" />
